--- a/weather_api/weather/src/index.css
+++ b/weather_api/weather/src/index.css
@@ -17,4 +17,28 @@ body {
 }
 main {
   min-height: 100vh;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.75)
+  );
+  padding: 25px;
+}
+.search-box .search-bar {
+  width: 500px;
+  margin: 0 0 75px;
+  padding: 15px;
+  appearance: none;
+  border: none;
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0px, 0px, 16px, 16px;
+  margin-top: -25px;
+  box-shadow: 0px 5px rgba(0, 0, 0, 0.2);
+  color: #313131;
+  font-size: 20px;
+  transition: 0.1s ease;
+}
+.search-box .search-bar:focus {
+  background-color: rgba(255, 255, 255, 0.75);
 }
