--- a/weather_api/weather/src/index.css
+++ b/weather_api/weather/src/index.css
@@ -7,10 +7,10 @@ body {
   font-family: "montseratt", sans-serif;
 }
 .app {
-  background-image: url("./assets/cold.png");
+  background-image: url("./assets/cold.jpg");
   background-size: cover;
   background-position: bottom;
-  transition: 0.4 ease-out;
+  transition: 0.4s ease;
 }
 .app.warm {
   background-image: url("./assets/warm.png");
